chore(3000): Fix dark mode colors (#16108)
* chore(3000): Fix dark mode colors

* Update UI snapshots for `chromium` (2)

* Update UI snapshots for `chromium` (1)

* Update UI snapshots for `chromium` (1)

* Use more `antd.less` options

* Consolidate `side` and `muted-light`

* Update tailwind.config.js

* Fix minor issues

* Fix more edge cases

* Update UI snapshots for `chromium` (1)

* Update UI snapshots for `chromium` (1)

* Update UI snapshots for `chromium` (2)

* Remove flaky Number from InsightCard stories

* Update UI snapshots for `chromium` (2)

* Remove some old Ant style overrides

* Fix replay colors

* Fix filters banner

---------

--- a/frontend/src/scenes/funnels/FunnelBarGraph/FunnelBarGraph.scss
+++ b/frontend/src/scenes/funnels/FunnelBarGraph/FunnelBarGraph.scss
@@ -5,7 +5,6 @@ $series_container_width: 1.5rem;
 $glyph_height: 23px; // Based on .funnel-step-glyph
 
 .funnel-bar-graph {
-    background-color: var(--funnel-canvas-background);
     min-height: 100%;
     padding: 1rem;
 
