--- a/frontend/src/toolbar/button/ToolbarButton.scss
+++ b/frontend/src/toolbar/button/ToolbarButton.scss
@@ -92,7 +92,7 @@
     font-size: 11px;
     padding: 0 4px;
     line-height: 20px;
-    background: var(--mark-color);
+    background: var(--mark);
     border-radius: 4px;
     font-weight: bold;
 }
